--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
       <div class="svg-container"></div>  
-      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+      <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
       <script src="scripts/d3.min.js"></script>
       <script src = "scripts/index.js"></script>
     </body>
